--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: monapp
+      MYSQL_DATABASE: joboard_db
     ports:
       - "3306:3306"
     volumes:
