--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,18 @@ services:
       - .env
     volumes:
       - .:/app
-
+    command: ["sh", "-c", "sleep 30 && npm start"]
+  
   db:
     image: mysql:8.0
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: joboard_db
+    env_file:
+      - .env
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
       - ./docker-entrypoint-initdb:/docker-entrypoint-initdb.d
-
+  
 volumes:
   db_data:
